--- a/.github/workflows/run-tutorial-notebook.yml
+++ b/.github/workflows/run-tutorial-notebook.yml
@@ -48,7 +48,7 @@ jobs:
     - name: Prepare the shared volume
       run: |
         mkdir madminer_shared
-        git -C madminer_shared clone --depth=1 https://github.com/madminer-tool/madminer.git
+        git -C madminer_shared clone --depth=1 -b fix-remove-python2_override https://github.com/tueda/madminer.git
 
     - name: Download output files uploaded by previous jobs
       uses: actions/download-artifact@v4
