--- a/.github/workflows/test-notebooks.yml
+++ b/.github/workflows/test-notebooks.yml
@@ -145,6 +145,7 @@ jobs:
       outputs: >-
         data/lhe_data_systematics.h5
         data/setup_systematics.h5
+      timeout: 86400
 
   tutorial_particle_physics_a2:
     needs: build
